@@ -1,0 +1,55 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <style type="text/css">
+    .mainTable {
+      padding: 2px;
+    }
+
+    .changedPathsTable {
+      padding: 2px;
+    }
+  </style>
+</head>
+<body>
+<table class="mainTable">
+  <tr>
+    <td>Author:</td>
+    <td>${author}</td>
+  </tr>
+  <tr>
+    <td>Date:</td>
+    <td>${date}</td>
+  </tr>
+  <tr>
+    <td colspan="2">${logMessage}</td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      ${changedPaths}
+    </td>
+  </tr>
+  <tr>
+    <td><b>Action</b></td>
+    <td><b>Count</b></td>
+  </tr>
+  <tr>
+    <td>Added</td>
+    <td>${addedCount}</td>
+  </tr>
+  <tr>
+    <td>Modified</td>
+    <td>${modifiedCount}</td>
+  </tr>
+  <tr>
+    <td>Replaced</td>
+    <td>${replacedCount}</td>
+  </tr>
+  <tr>
+    <td>Deleted</td>
+    <td>${deletedCount}</td>
+  </tr>
+</table>
+</body>
+</html>
